force-app/main/default/objects/CaseCreatorEvent__e/CaseCreatorEvent__e.object-meta.xml
<CustomObject>
    <description>This Platform Event is subscribed inside salesforce ,and whenever the  customer priority 
becomes high it creates a case for technical support resolution.</description>
    <label>Case Creator Event</label>
    <pluralLabel>Case Creator Events</pluralLabel>
</CustomObject>