force-app/main/default/objects/CaseCreatorEvent__e/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>This field is used to hold the account Id for case creation</description>
    <label>Account ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>