force-app/main/default/objects/CaseCreatorEvent__e/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This used to hold the description of the case</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>