force-app/main/default/objects/CaseCreatorEvent__e/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>This used to hold the event source</description>
    <label>Origin</label>
    <length>20</length>
    <type>Text</type>
</CustomField>