force-app/main/default/objects/CaseCreatorEvent__e/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>This field holds the priority of the case should be created</description>
    <label>Priority</label>
    <length>10</length>
    <type>Text</type>
</CustomField>