force-app/main/default/objects/CaseCreatorEvent__e/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>This used to hold subject for the case</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>